--- a/ROMAA-main-main-master/ROMAA-main/Romaa/package.json
+++ b/ROMAA-main-main-master/ROMAA-main/Romaa/package.json
@@ -14,7 +14,9 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.20",
     "lucide-react": "^0.508.0",
+    "motion-dom": "^12.23.20",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
